# $Id$
2008-06-10 Benoit Grégoire  <bock@step.polymtl.ca>
	* Authenticator.php:  Fix SQL error closing connections.
	* auth/index.php:  Probably fix the "Access denied" message when user click twice problem that resurfaced.
	* At long last, implement operational Dynamic abuse control (out of the embryo of the token architecture)!  Configurable in Network preferences if you have the permissions.  Unlike static limits, this is a sliding window (typically a month) during which user have a bandwidth and connection duration limit, per node, and totalled throughout the network.
	* UIAllowedBandwidth:  New, simplistic content type to show the user how much of his allocation he consumed.  Off course, the goal is actually to make it into a pretty graph....

2008-06-10 Benoit Grégoire  <bock@step.polymtl.ca>
	* Begin implementing http://dev.wifidog.org/wiki/doc/developer/TokenArchitecture.  This is a first step:  SQL schema changes, and adapt the current functionnality to the new schema to have a baseline.  Everything should work as before, please notify me if you notice anything strange...

2008-04-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fixed dependencies on simplepie.  Simplepie removed a stable branch from their SVN.  Why on earth would one do that!?!?
	* For an existing install, you may want to remove the feedpressreview and simplepie directories and re-install them from the Dependencies page under the "Server" menu.  
	
2008-04-02 Robin Jones
        * Fixed #325 password validation
        * Added a new banner for the install script

2008-04-01 Benoit Grégoire  <bock@step.polymtl.ca>
	* Apply patch from dc.ml@oxys.net to allow commas in authentication parameter strings.  This is sometimes necessary for LDAP, and fixes #342

2008-03-31 Robin Jones
        * Minor install script improvements, including making changelog accessible and colour in the permissions tables

2008-03-21 Benoit Grégoire  <bock@step.polymtl.ca>